--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Open Sans", sans-serif;
+  background-color: lightcyan;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1,
+h2,
+h3,
+.card-body > h5 {
+  font-family: "Oswald";
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  color: #3046c5;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card-img-overlay h5 {
   color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.row-content {
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px;
+}
+.site-footer {
+  background-image: linear-gradient(#cec8ff, white);
+  padding: 20px 0;
+}
+.jumbotron {
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
+  color: white;
+  text-transform: capitalize;
+}
+.jumbotron h2 {
+  color: #cec8ff;
+}
+.navbar-dark {
+  background-color: #901cad;
+}
+.page-enter {
+  opacity: 0;
+  transform: translateX(-100%);
 }
 
-.App-link {
-  color: #61dafb;
+.page-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+  transition: 300ms ease-out;
+}
+.page-exit {
+  opacity: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page-exit-active {
+  opacity: 0;
+  transition: 300ms ease-out;
+}
+
+.title {
+  color: #60106b !important;
+}
+
+.cardInfo {
+  background-color: lightblue;
 }
